--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "4.7.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.1.1",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
