--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "18.6.3",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/redux": "^3.6.0",
     "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
@@ -22,8 +23,12 @@
   },
   "dependencies": {
     "@prisma/client": "^4.1.1",
+    "@reduxjs/toolkit": "^1.8.3",
+    "axios": "^0.27.2",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0"
   }
 }
