--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "4.7.4"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@prisma/client": "^4.1.1",
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.27.2",
